# personsvc-rs

./: README.md
personsvc/: Cargo.toml  Dockerfile
personsvc/db/: populate.sql  schema.sql
personsvc/src/: main.rs
personsvc/src/db/: mod.rs  outbox.rs  person.rs
personsvc/src/handlers/: mod.rs  person_handler.rs
personsvc/src/services/: mod.rs  person_service.rs
