[package]
name = "personsvc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde-chrono-str = "0.1.0"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-uuid-1"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
opentelemetry = "0.26.0"
opentelemetry-jaeger = "0.22.0"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
